[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/actors/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/bruno.png" type="Texture" id=2]
[ext_resource path="res://assets/bubbles/hey-bubble.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 14.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4, 4 )

[sub_resource type="CircleShape2D" id=11]
radius = 72.4431

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.101961, 0.501961, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.509804, 0.00392157, 0.00392157, 1 )

[sub_resource type="Animation" id=14]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("DeadSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 12.996, 3.13833, 1.03527 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}

[node name="Bruno" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_mask = 7
script = ExtResource( 1 )
speed = 300

[node name="Speech" type="AudioStreamPlayer" parent="."]

[node name="HeyBubble" type="Sprite" parent="."]
position = Vector2( 28, -8 )
scale = Vector2( 0.25, 0.25 )
z_index = 2000
z_as_relative = false
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="DeadSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 9 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 12 )
shape = SubResource( 10 )

[node name="ShoutArea" type="Area2D" parent="."]
visible = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShoutArea"]
position = Vector2( 8, 8 )
shape = SubResource( 11 )

[node name="HungerBarNode" type="Node2D" parent="."]
z_index = 4096
z_as_relative = false

[node name="HungerBar" type="ProgressBar" parent="HungerBarNode"]
margin_top = -3.0
margin_right = 16.0
margin_bottom = -1.0
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 14 )
anims/Walk = SubResource( 15 )
[connection signal="body_entered" from="ShoutArea" to="." method="_on_ShoutArea_body_entered"]
